--- a/app/src/main/res/layout/fragment_repos.xml
+++ b/app/src/main/res/layout/fragment_repos.xml
@@ -56,6 +56,14 @@
             android:drawableTop="?attr/oic_browse_directory"
             android:text="@string/directory"/>
 
+        <Button
+            android:id="@+id/fragment_repos_webdav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:drawableTop="?attr/oic_browse_directory"
+            android:text="Webdav"/>
+
         <Space
             android:layout_height="0dp"
             android:layout_width="0dp"
